# Unless we have ENABLE_ALL set, based the building of png on
# the system detection results
if (ENABLE_ALL AND NOT DEFINED ENABLE_GDAL)
  set(ENABLE_GDAL ON)
endif (ENABLE_ALL AND NOT DEFINED ENABLE_GDAL)

if (NOT ENABLE_GDAL)

  find_package(GDAL)

  if (NOT GDAL_FOUND AND NOT DEFINED ENABLE_GDAL)
    set(ENABLE_GDAL "ON" CACHE BOOL "Enable gdal build")
  endif (NOT GDAL_FOUND AND NOT DEFINED ENABLE_GDAL)

endif (NOT ENABLE_GDAL)
set(ENABLE_GDAL "${ENABLE_GDAL}" CACHE BOOL "Enable gdal build")

if (ENABLE_GDAL)

  if (TARGET ZLIB_BLD)
    set(ZLIB_TARGET ZLIB_BLD)
  endif (TARGET ZLIB_BLD)

  if (TARGET PNG_BLD)
    set(PNG_TARGET PNG_BLD)
  endif (TARGET PNG_BLD)

  if (TARGET PROJ_BLD)
    set(PROJ_TARGET PROJ_BLD)
  endif (TARGET PROJ_BLD)

  if (TARGET SQLITE3_BLD)
    set(SQLITE3_TARGET SQLITE3_BLD)
  endif (TARGET SQLITE3_BLD)

  ExternalProject_Add(GDAL_BLD
    SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/gdal"
    BUILD_ALWAYS ${EXT_BUILD_ALWAYS} ${LOG_OPTS}
    CMAKE_ARGS
    $<$<NOT:$<BOOL:${CMAKE_CONFIGURATION_TYPES}>>:-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}>
    $<$<BOOL:${ZLIB_TARGET}>:-DZ_PREFIX=ON>
    $<$<BOOL:${ZLIB_TARGET}>:-DZ_PREFIX_STR=${Z_PREFIX_STR}>
    -DBIN_DIR=${BIN_DIR}
    -DLIB_DIR=${LIB_DIR}
    -DCMAKE_INSTALL_LIBDIR=${LIB_DIR}
    -DBUILD_STATIC_LIBS=${BUILD_STATIC_LIBS}
    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
    -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_PREFIX}/${LIB_DIR}
    -DGDAL_INST_DATA_DIR=${CMAKE_INSTALL_PREFIX}/${DATA_DIR}/gdal
    -DGDAL_USE_EXTERNAL_LIBS=OFF
    -DGDAL_USE_INTERNAL_LIBS=ON # GEOTIFF, GIF, JPEG, JSONC, LERC, OPENCAD, PNG, QHULL, TIFF, ZLIB
    -DGDAL_USE_ZLIB_INTERNAL=OFF
    -DGDAL_USE_ZLIB=ON
    $<$<BOOL:${ZLIB_TARGET}>:-DZLIB_ROOT=${CMAKE_INSTALL_PREFIX}>
    -DGDAL_USE_PNG_INTERNAL=OFF
    -DGDAL_USE_PNG=ON
    $<$<BOOL:${PNG_TARGET}>:-DPNG_ROOT=${CMAKE_INSTALL_PREFIX}>
    -DGDAL_USE_PROJ_INTERNAL=OFF
    -DGDAL_USE_PROJ=ON
    $<$<BOOL:${PROJ_TARGET}>:-DPROJ_ROOT=${CMAKE_INSTALL_PREFIX}>
    -DGDAL_USE_SQLITE3=ON
    $<$<BOOL:${SQLITE3_TARGET}>:-DSQLite3_ROOT=${CMAKE_INSTALL_PREFIX}>
    -DGDAL_BUILD_OPTIONAL_DRIVERS=OFF
    -DGDAL_ENABLE_DRIVER_RAW=ON # ACE2, BT, BYN, CPG, CTable2, DIPEx, DOQ1, DOQ2, EHDR, EIR, ENVI, FAST, GenBIN, GSC, GTX, MFF2, ISCE, KRO, MFF, LAN, LCP, LOSLAS, NDF, NTv2, PAUX, PNM, ROIPAC, RRASTER, SNODAS
    -DGDAL_ENABLE_DRIVER_PDS=ON # PDS, PDS4, ISIS2, ISIS3, VICAR
    -DGDAL_ENABLE_DRIVER_AAIGRID=ON # AAIGRID, GRASSASCIIGRID, ISG
    -DGDAL_ENABLE_DRIVER_GSG=ON # GSAG, GSBG, GS7BG
    -DGDAL_ENABLE_DRIVER_NITF=ON # NITF, RPFTOC, ECRGTOC
    -DGDAL_ENABLE_DRIVER_NORTHWOOD=ON # NWT_GRD, NWT_GRC
    -DGDAL_ENABLE_DRIVER_ADRG=ON # SRP, ADRG
    -DGDAL_ENABLE_DRIVER_AVC=ON # AVCBIN, AVCE00
    -DGDAL_ENABLE_DRIVER_AIGRID=ON
    -DGDAL_ENABLE_DRIVER_AIRSAR=ON
    -DGDAL_ENABLE_DRIVER_ARG=ON
    -DGDAL_ENABLE_DRIVER_BLX=ON
    -DGDAL_ENABLE_DRIVER_BMP=ON
    -DGDAL_ENABLE_DRIVER_BSB=ON
    -DGDAL_ENABLE_DRIVER_CALS=ON
    -DGDAL_ENABLE_DRIVER_CEOS=ON
    -DGDAL_ENABLE_DRIVER_COASP=ON
    -DGDAL_ENABLE_DRIVER_COSAR=ON
    -DGDAL_ENABLE_DRIVER_CTG=ON
    -DGDAL_ENABLE_DRIVER_DIMAP=ON
    -DGDAL_ENABLE_DRIVER_DTED=ON
    -DGDAL_ENABLE_DRIVER_ELAS=ON
    -DGDAL_ENABLE_DRIVER_ERS=ON
    -DGDAL_ENABLE_DRIVER_ENVISAT=ON
    -DGDAL_ENABLE_DRIVER_ESRIC=ON
    -DGDAL_ENABLE_DRIVER_FIT=ON
    -DGDAL_ENABLE_DRIVER_GFF=ON
    -DGDAL_ENABLE_DRIVER_GIF=ON
    -DGDAL_ENABLE_DRIVER_GRIB=ON
    -DGDAL_ENABLE_DRIVER_GXF=ON
    -DGDAL_ENABLE_DRIVER_HF2=ON
    -DGDAL_ENABLE_DRIVER_HFA=ON
    -DGDAL_ENABLE_DRIVER_IDRISI=ON
    -DGDAL_ENABLE_DRIVER_ILWIS=ON
    -DGDAL_ENABLE_DRIVER_IRIS=ON
    -DGDAL_ENABLE_DRIVER_JDEM=ON
    -DGDAL_ENABLE_DRIVER_JPEG=ON
    -DGDAL_ENABLE_DRIVER_KMLSUPEROVERLAY=ON
    -DGDAL_ENABLE_DRIVER_L1B=ON
    -DGDAL_ENABLE_DRIVER_LEVELLER=ON
    -DGDAL_ENABLE_DRIVER_MAP=ON
    -DGDAL_ENABLE_DRIVER_MRF=ON
    -DGDAL_ENABLE_DRIVER_MEM=ON
    -DGDAL_ENABLE_DRIVER_MSGN=ON
    -DGDAL_ENABLE_DRIVER_NGSGEOID=ON
    -DGDAL_ENABLE_DRIVER_OZI=ON
    -DGDAL_ENABLE_DRIVER_JAXAPALSAR=ON
    -DGDAL_ENABLE_DRIVER_PCIDSK=ON
    -DGDAL_ENABLE_DRIVER_PCRASTER=ON
    -DGDAL_ENABLE_DRIVER_PDF=ON
    -DGDAL_ENABLE_DRIVER_PNG=ON
    -DGDAL_ENABLE_DRIVER_PRF=ON
    -DGDAL_ENABLE_DRIVER_R=ON
    -DGDAL_ENABLE_DRIVER_RASTERLITE=ON
    -DGDAL_ENABLE_DRIVER_RIK=ON
    -DGDAL_ENABLE_DRIVER_RMF=ON
    -DGDAL_ENABLE_DRIVER_RS2=ON
    -DGDAL_ENABLE_DRIVER_SAFE=ON
    -DGDAL_ENABLE_DRIVER_SAR_CEOS=ON
    -DGDAL_ENABLE_DRIVER_SAGA=ON
    -DGDAL_ENABLE_DRIVER_SDTS=ON
    -DGDAL_ENABLE_DRIVER_SENTINEL2=ON
    -DGDAL_ENABLE_DRIVER_SGI=ON
    -DGDAL_ENABLE_DRIVER_SIGDEM=ON
    -DGDAL_ENABLE_DRIVER_SRTMHGT=ON
    -DGDAL_ENABLE_DRIVER_STACIT=ON
    -DGDAL_ENABLE_DRIVER_STACTA=ON
    -DGDAL_ENABLE_DRIVER_TERRAGEN=ON
    -DGDAL_ENABLE_DRIVER_TGA=ON
    -DGDAL_ENABLE_DRIVER_TIL=ON
    -DGDAL_ENABLE_DRIVER_TSX=ON
    -DGDAL_ENABLE_DRIVER_USGSDEM=ON
    -DGDAL_ENABLE_DRIVER_VRT=ON
    -DGDAL_ENABLE_DRIVER_XPM=ON
    -DGDAL_ENABLE_DRIVER_XYZ=ON
    -DGDAL_ENABLE_DRIVER_ZARR=ON
    -DGDAL_ENABLE_DRIVER_ZMAP=ON
    -DOGR_BUILD_OPTIONAL_DRIVERS=OFF
    -DOGR_ENABLE_DRIVER_AVC=ON
    -DOGR_ENABLE_DRIVER_CAD=ON
    -DOGR_ENABLE_DRIVER_CSV=ON
    -DOGR_ENABLE_DRIVER_DGN=ON
    -DOGR_ENABLE_DRIVER_DXF=ON
    -DOGR_ENABLE_DRIVER_EDIGEO=ON
    -DOGR_ENABLE_DRIVER_FLATGEOBUF=ON
    -DOGR_ENABLE_DRIVER_GEOCONCEPT=ON
    -DOGR_ENABLE_DRIVER_GPKG=ON
    -DOGR_ENABLE_DRIVER_GMT=ON
    -DOGR_ENABLE_DRIVER_IDRISI=ON
    -DOGR_ENABLE_DRIVER_MAPML=ON
    -DOGR_ENABLE_DRIVER_MITAB=ON
    -DOGR_ENABLE_DRIVER_NTF=ON
    -DOGR_ENABLE_DRIVER_PGDUMP=ON
    -DOGR_ENABLE_DRIVER_S57=ON
    -DOGR_ENABLE_DRIVER_SDTS=ON
    -DOGR_ENABLE_DRIVER_SELAFIN=ON
    -DOGR_ENABLE_DRIVER_SQLITE=ON
    -DOGR_ENABLE_DRIVER_SXF=ON
    -DOGR_ENABLE_DRIVER_TIGER=ON
    -DOGR_ENABLE_DRIVER_VDV=ON
    -DOGR_ENABLE_DRIVER_WASP=ON
    -DBUILD_PYTHON_BINDINGS=OFF
    -DBUILD_JAVA_BINDINGS=OFF
    -DBUILD_CSHARP_BINDINGS=OFF
    LOG_CONFIGURE ${EXT_BUILD_QUIET}
    LOG_BUILD ${EXT_BUILD_QUIET}
    LOG_INSTALL ${EXT_BUILD_QUIET}
    LOG_OUTPUT_ON_FAILURE ${EXT_BUILD_QUIET}
    )

  if (TARGET ZLIB_BLD)
    ExternalProject_Add_StepDependencies(GDAL_BLD configure ZLIB_BLD-install)
  endif (TARGET ZLIB_BLD)

  if (TARGET PNG_BLD)
    ExternalProject_Add_StepDependencies(GDAL_BLD configure PNG_BLD-install)
  endif (TARGET PNG_BLD)

  if (TARGET PROJ_BLD)
    ExternalProject_Add_StepDependencies(GDAL_BLD configure PROJ_BLD-install)
  endif (TARGET PROJ_BLD)

  if (TARGET SQLITE3_BLD)
    ExternalProject_Add_StepDependencies(GDAL_BLD configure SQLITE3_BLD-install)
  endif (TARGET SQLITE3_BLD)

  ExternalProject_Add_StepTargets(GDAL_BLD install)

endif (ENABLE_GDAL)

# Local Variables:
# tab-width: 8
# mode: cmake
# indent-tabs-mode: t
# End:
# ex: shiftwidth=2 tabstop=8
